# butlerbot

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  dockerfile  makefile  pyproject.toml
data/: notes.parquet
notebooks/: data_model.ipynb  news.ipynb  telebot.ipynb
src/: chains.py  data_storage.py  llm.py  main.py  models.py  news_grabber.py  settings.py  telegram_bot.py  weather.py
src/chains/: daily_report.py  notes.py  question.py  response.py  weather.py
src/config/: secrets_template
